# quanta_cerebra

./: BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Doxyfile  Makefile  QuantaCerebra  README.md  SECURITY.md  build.bat  chai_checkins.md  chai_checkouts.md  config.h  config.ini  docker-compose.yml  expected_output.txt  json_logic.cpp  json_logic.h  main.cpp  sample_input.json  simple_build.cpp  test_bdd.cpp  test_config_ext.json  test_unit.cpp  video_logic.cpp  video_logic.h
config_presets/: fast_preview.json  high_quality.json
data/: brain_states.json  builtin_atlas.json  neurotransmitters.json  pathways.json  regions.json  sample_activity.json
docs/: enhancements.md  plan.md  user_manual.md
scripts/: scan_vulns.sh
src/: ai.cpp  ai.h  analytics.cpp  analytics.h  cloud.cpp  cloud.h  config.cpp  config.h  exporters.cpp  exporters.h  i18n.h  json_logic.cpp  json_logic.h  main.cpp  plugins.h  ui_controller.cpp  ui_controller.h  video_logic.cpp  video_logic.h
src/ai/: ai.cpp  ai.h
src/analytics/: analytics.cpp  analytics.h
src/api/: qc_api.cpp  qc_api.h
src/cloud/: cloud.cpp  cloud.h
src/core/: atlas_core.cpp  atlas_core.h  atlas_region.cpp  atlas_region.h  brain_region.h  data_parsing_hub.cpp  data_parsing_hub.h  json_logic.cpp  json_logic.h  modeling_engine.cpp  modeling_engine.h  neurochemistry.cpp  neurochemistry.h  pathway_logic.cpp  pathway_logic.h  plugins.h  region.hpp  region_pool.cpp  region_pool.h  sample.cpp  sample.hpp  simulation_engine.cpp  simulation_engine.h  state_manager.cpp  state_manager.h
src/io/: config.cpp  config.h  config_util.hpp  csv_parser.cpp  csv_parser.h  exporters.cpp  exporters.h  input_source.cpp  input_source.hpp  json_parser.cpp  json_parser.h  serial_interface.cpp  serial_interface.h  serial_port.cpp  serial_port.hpp  simulated_device.cpp  simulated_device.hpp  xml_parser.cpp  xml_parser.h  yaml_parser.cpp  yaml_parser.h
src/ui/: app.cpp  app.hpp  cli_handler.cpp  cli_handler.h  color_theme.cpp  color_theme.hpp  guided_tour.cpp  guided_tour.h  interactive_ui.cpp  interactive_ui.h  report_ui.cpp  report_ui.hpp  terminal_renderer.cpp  terminal_renderer.h  ui_controller.cpp  visual_themes.cpp  visual_themes.h
src/visualization/: scene_renderer.cpp  scene_renderer.h  video_logic.cpp  video_logic.h  view_2d.cpp  view_2d.h  view_3d.cpp  view_3d.h
tests/: category_1.cpp  category_10.cpp  category_11.cpp  category_12.cpp  category_13.cpp  category_14.cpp  category_15.cpp  category_16.cpp  category_17.cpp  category_18.cpp  category_19.cpp  category_2.cpp  category_20.cpp  category_3.cpp  category_4.cpp  category_5.cpp  category_6.cpp  category_7.cpp  category_8.cpp  category_9.cpp  test_access_cloud_security.cpp  test_advanced_features.cpp  test_ai_advanced.cpp  test_ai_integration.cpp  test_analytics.cpp  test_api_sdk.cpp  test_artistic_generative.cpp  test_bdd.cpp  test_cloud_distributed.cpp  test_collaboration.cpp  test_config.h  test_core.cpp  test_core_modeling.cpp  test_data_io.cpp  test_dev_tooling.cpp  test_ecosystem.cpp  test_hardware.cpp  test_harness.h  test_performance.cpp  test_port_docs_analytics.cpp  (+7 more)
tests/bdd/: bdd_runner.cpp
tests/bdd/features/: atlas.feature  interactive.feature  pathways.feature  playback.feature  rendering.feature  report_mode.feature  templates.feature
tests/bdd/features/steps/: common_steps.cpp  interactive_steps.cpp  playback_steps.cpp  report_steps.cpp
tests/bdd/steps/: atlas_steps.cpp  pathway_steps.cpp  playback_steps.cpp  rendering_steps.cpp  templates_steps.cpp
tests/e2e/: e2e_full_workflow.sh
tests/e2e/atlas/: CMakeLists.txt  pty_serial_fixture.cpp  sample_frames.json
tests/e2e/cli/: e2e_cli.cpp
tests/sdd/: execute_sorrel_audit.sh  run_sdd_suite.sh  sorrel_checkins.md  sorrel_checkouts.md
tests/sdd/cards/: EquipmentLearningAudit.cpp  FlickerAudit.cpp  MethodAudit.cpp  ResilienceAudit.cpp  StructuralAudit.cpp
tests/sdd/cpp/util/: fact_utils.h  metric_reporter.h
tests/sdd/facts/: ai_advanced.facts  analytics.facts  api_sdk.facts  artistic_generative.facts  cloud.facts  collaboration.facts  core_modeling.facts  data_io.facts  ecosystem.facts  equipment_learning.facts  integration_hub.facts  performance.facts  portability.facts  quality_testing.facts  reliability.facts  restrictions.facts  security.facts  usability.facts  visualization.facts
tests/temp/: sorrel_checkouts.md
tests/unit/: mock.h  test_harness.h
tests/unit/ai/: test_ai_advanced.cpp
tests/unit/analytics/: test_analytics.cpp
tests/unit/api/: test_api_sdk.cpp
tests/unit/cloud/: test_cloud_distributed.cpp  test_collaboration.cpp  test_ecosystem.cpp
tests/unit/core/: main.cpp  test_atlas.cpp  test_atlas_errors.cpp  test_atlas_regions.cpp  test_atlas_simulation.cpp  test_brain_state_config.cpp  test_community_docs.cpp  test_core_modeling.cpp  test_data_parsing_hub.cpp  test_dev_tooling.cpp  test_input.cpp  test_io_extensions.cpp  test_neurochemistry.cpp  test_pathway_logic.cpp  test_pathways.cpp  test_portability.cpp  test_quality_testing.cpp  test_region.cpp  test_region_config.cpp  test_renderer.cpp  test_report.cpp  test_serial.cpp  test_simulated_device.cpp  test_simulation.cpp  test_templates.cpp  test_templates_atlas.cpp
tests/unit/io/: test_atlas_json.cpp  test_data_io.cpp  test_json_utility.cpp
tests/unit/security/: test_security_privacy.cpp
tests/unit/ui/: test_cli_handler.cpp  test_education.cpp  test_terminal_renderer.cpp  test_usability.cpp  test_ux_interactivity.cpp
tests/unit/visualization/: test_artistic_generative.cpp  test_visualization.cpp
